--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "cc-test-descriptor",
     "displayName": "cc-test-descriptor",
+    "publisher": "nathanwhit",
     "description": "",
     "version": "0.0.1",
     "engines": {
